--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "FreeRTOS/Test/CMock/CMock"]
 	path = FreeRTOS/Test/CMock/CMock
 	url = https://github.com/ThrowTheSwitch/CMock.git
+[submodule "FreeRTOS/Source"]
+	path = FreeRTOS/Source
+	url = git@github.com:keystone-enclave/FreeRTOS-Kernel.git
+	branch = master
